# dotman

./: Cargo.toml  README.md
src/: app.rs  cli.rs  config.rs  main.rs  util.rs
