[package]
name = "dotman"
version = "0.1.0"
edition = "2021"
authors = ["ryohz"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
ignore = "0.4.21"
log = "0.4.20"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
walkdir = "2.4.0"
xxhash-rust = { version = "0.8.5", features = ["xxh32"] }
